# trinetx-preprocessing

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTINUITY.md  CONTRIBUTING.md  Hypercapnia Data Checks - Executed.ipynb  Hypercapnia Data Checks.ipynb  Hypercapnia Final Data Checks only.ipynb  Hypercapnia Final Dataset Generation - Master.ipynb  Hypercapnia Final Dataset Generation - RFS_ABG_ENC_EMER2.ipynb  Hypercapnia Final Dataset Generation - RFS_OBESITY_ENC_EMER.ipynb  Hypercapnia Final Dataset Generation - RFS_OBESITY_ENC_INPAT.ipynb  Hypercapnia Final Dataset Generation - RFS_PREDISPOSITION_ENC_EMER.ipynb  Hypercapnia Final Dataset Generation - RFS_PREDISPOSITION_ENC_INPAT.ipynb  Hypercapnia Final Dataset Generation - RFS_RESPFAIL_ENC_AMB.ipynb  Hypercapnia Final Dataset Generation - RFS_VBG_ENC_EMER.ipynb  Hypercapnia Master.ipynb  Hypercapnia NEW DATA - Current Diagnosis (CSV Processing).ipynb  Hypercapnia NEW DATA - Encounter (CSV Processing).ipynb  Hypercapnia NEW DATA - Lab Results (CSV Processing).ipynb  Hypercapnia NEW DATA - Medication (CSV Processing).ipynb  Hypercapnia NEW DATA - Prior Diagnosis (CSV Processing).ipynb  Hypercapnia NEW DATA - Procedure (CSV Processing).ipynb  Hypercapnia NEW DATA - RFS Processing.ipynb  Hypercapnia NEW DATA - Vital Signs (CSV Processing).ipynb  README.md  README.rtf  README.txt  SECURITY.md  config.example.yaml  config.yaml  llms.txt  pyproject.toml  split_db.sh
Executed Notebooks/: Hypercapnia Final Dataset Generation - RFS_ABG_ENC_AMB2.ipynb  Hypercapnia Final Dataset Generation - RFS_ABG_ENC_EMER2.ipynb  (+15 more)
docs/: CONFIG.md  (+13 more)
(+95 files in other folders)
